Fix library generation fields and reuse project name across meson.build files

--- a/meson.build
+++ b/meson.build
@@ -1,37 +1,40 @@
 project('libfridge', 'vala', 'c',
   version: '0.0.1',
-  meson_version: '>= 1.4.0',
+  meson_version: '>= 1.1.0',
   default_options: [
     'warning_level=2',
     'werror=false',
   ],
 )
 
-name = meson.project_name() + '-' + version.to_string()
+LIBRARY_NAME = 'fridge'
+GENERAL_NAME = 'Fridge'
+PROJECT_DESCRIPTION = 'Simple Vala App Storage Library'
+API_VERSION = '0.1'
+
 src_dir = join_paths(meson.project_source_root(), 'src')
 is_subproject = meson.is_subproject()
 
-API_VERSION = '0.1'
-
-dependencies = [
-  dependency('glib-2.0'),
-  dependency('gobject-2.0')
-]
-
 pkgconfig = import('pkgconfig')
-
 PKGCONFIG_DEPS = ['glib-2.0', 'gobject-2.0']
+
 vapidir = get_option('datadir') / 'vala' / 'vapi'
 
 add_project_arguments(['--enable-experimental'], language: 'vala')
 
 g_ir_compiler = find_program('g-ir-compiler', required: false)
 
+libfridge_deps = [
+  dependency('glib-2.0'),
+  dependency('gobject-2.0')
+]
+
 subdir('src')
 
 if get_option('enable_valadoc')
   valadoc = find_program('valadoc')
-  libfridge_docs = custom_target('generate-docs',
+  libfridge_docs = custom_target(
+    'generate-docs',
     input: sources,
     install: true,
     # FIXME: Installing to tmp, so the target will be built
@@ -41,15 +44,16 @@ if get_option('enable_valadoc')
     install_dir: get_option('datadir') / 'devhelp' / 'books',
     command: [
       valadoc,
-      '-o', meson.current_build_dir() / 'Fridge-' + API_VERSION,
+      '-o', meson.current_source_dir() / 'docs',
+      '--package-name=@0@'.format(meson.project_name()),
+      '--package-version=@0@'.format(meson.project_version()),
       '--doclet',
       'devhelp',
       '@INPUT@',
       '--force'
     ],
-    output: 'Fridge-' + API_VERSION)
+    output: GENERAL_NAME + '-' + API_VERSION)
 
-  install_subdir(meson.current_build_dir() / 'Fridge-' + API_VERSION / 'Fridge-' + API_VERSION,
+  install_subdir(meson.current_source_dir() / 'docs',
     install_dir: get_option('datadir') / 'devhelp' / 'books')
 endif
-
