--- a/src/meson.build
+++ b/src/meson.build
@@ -1,51 +1,54 @@
-conf = configuration_data()
-conf.set('prefix', get_option('prefix'))
-conf.set('libdir', get_option ('libdir'))
-conf.set('PROJECT_NAME', 'libfridge')
-conf.set('PROJECT_VERSION', '0.0.1')
-conf.set('API_VERSION', API_VERSION)
-
 sources = files([
   'library.vala'
 ])
 
-libfridge = library('libfridge-' + API_VERSION,
+libfridge = library(
+  LIBRARY_NAME + '-' + API_VERSION,
   sources,
-  vala_header: 'libfridge.h',
-  vala_vapi: 'libfridge-' + API_VERSION + '.vapi',
-  vala_gir: 'Fridge-' + API_VERSION + '.gir',
-  dependencies : dependencies,
+  vala_header: meson.project_name() + '.h',
+  vala_vapi: meson.project_name() + '-' + API_VERSION + '.vapi',
+  vala_gir: GENERAL_NAME + '-' + API_VERSION + '.gir',
+  soversion: API_VERSION,
+  dependencies : libfridge_deps,
   vala_args: [
     '--abi-stability'
     ],
   install: true,
   install_dir: [
     true,
-    get_option('includedir') / 'libfridge-' + API_VERSION / 'libfridge',
+    get_option('includedir') / meson.project_name() + '-' + API_VERSION / meson.project_name(),
     vapidir,
     g_ir_compiler.found()
   ]
 )
 
+libfridge_dep = declare_dependency(
+  link_with: libfridge,
+  include_directories: '.',
+  dependencies: libfridge_deps
+)
+
 if g_ir_compiler.found()
-  custom_target('libfridge-typelib',
+  custom_target(
+    meson.project_name() + '-typelib',
     command: [
       g_ir_compiler,
-      '--shared-library', 'libfridge-@0@.so'.format (API_VERSION),
+      '--shared-library', meson.project_name() + '-@0@.so'.format (API_VERSION),
       '--output', '@OUTPUT@',
-      meson.current_build_dir() / 'Fridge-' + API_VERSION + '.gir'
+      meson.current_build_dir() / GENERAL_NAME + '-' + API_VERSION + '.gir'
     ],
-    output: 'Fridge-' + API_VERSION + '.typelib',
+    output: GENERAL_NAME + '-' + API_VERSION + '.typelib',
     depends: libfridge,
     install: true,
-    install_dir: join_paths(get_option('libdir'), 'girepository-1.0'))
+    install_dir: join_paths(get_option('libdir'), 'girepository-1.0')
+  )
 endif
 
-pkgconfig.generate(libfridge,
-  subdirs: 'libfridge-' + API_VERSION,
+pkgconfig.generate(
+  libfridge,
   version: API_VERSION,
-  name: 'libfridge',
-  filebase: 'libfridge-' + API_VERSION,
+  name: meson.project_name(),
+  filebase: meson.project_name() + '-' + API_VERSION,
   requires: PKGCONFIG_DEPS,
-  description: 'Simple Vala App Storage Library')
-
+  description: PROJECT_DESCRIPTION
+)
