--- a/meson.build
+++ b/meson.build
@@ -24,7 +24,7 @@ g_ir_compiler = find_program('g-ir-compiler', required: false)
 libfridge_deps = [
   dependency('glib-2.0'),
   dependency('gobject-2.0'),
-  dependency('json-glib-1.0')
+  dependency('json-glib-1.0', required : get_option('enable_json'))
 ]
 
 subdir('src')
