--- a/meson.build
+++ b/meson.build
@@ -21,10 +21,38 @@ add_project_arguments(['--enable-experimental'], language: 'vala')
 
 g_ir_compiler = find_program('g-ir-compiler', required: false)
 
+if build_machine.system() == 'linux'
+    vala_os_arg = ['--define=LINUX']
+elif build_machine.system() == 'dragonfly'
+    vala_os_arg = ['--define=DRAGON_FLY']
+elif build_machine.system() == 'freebsd'
+    vala_os_arg = ['--define=FREE_BSD']
+elif build_machine.system() == 'netbsd'
+    vala_os_arg = ['--define=NET_BSD']
+elif build_machine.system() == 'windows'
+    vala_os_arg = ['--define=WINDOWS']
+else
+    vala_os_arg = []
+endif
+
+glib_min_version = '2.50'
+if build_machine.system() == 'windows'
+    gio_os_dep = dependency('gio-windows-2.0', version: '>=' + glib_min_version)
+else
+    gio_os_dep = dependency('gio-unix-2.0', version: '>=' + glib_min_version)
+endif
+
+add_project_arguments(
+    vala_os_arg,
+    '--target-glib=' + glib_min_version,
+    language: ['vala']
+)
+
 libfridge_deps = [
-  dependency('glib-2.0'),
-  dependency('gobject-2.0'),
-    dependency('gio-2.0'),
+  dependency('gio-2.0', version: '>=' + glib_min_version),
+  gio_os_dep,
+  dependency('glib-2.0', version: '>=' + glib_min_version),
+  dependency('gobject-2.0', version: '>=' + glib_min_version),
   dependency('json-glib-1.0', required : get_option('enable_json'))
 ]
 
